--- a/navsim/planning/script/config/training/default_training.yaml
+++ b/navsim/planning/script/config/training/default_training.yaml
@@ -11,7 +11,7 @@ defaults:
   - default_common
   - default_evaluation
   - default_train_val_test_log_split
-  - agent: pad_nommcv_agent #navsim_agent
+  - agent: drivoR #navsim_agent
   - _self_
 
 split: trainval
