--- a/navsim/planning/script/config/training/default_training.yaml
+++ b/navsim/planning/script/config/training/default_training.yaml
@@ -18,7 +18,7 @@ split: trainval
 cache_path: ${oc.env:NAVSIM_EXP_ROOT}/navsim_cache_nommcv
 use_cache_without_dataset: true # load the training samples from the cache. scene-filter will be ignored
 force_cache_computation: false
-experiment_name: navsim_nommcv
+experiment_name: drivoR
 seed: 0 
 validation_run: false
 
